feat(tsoa-swagger): Add generate service and controller to add reviews. Add review helpers, model and types. Start to add get reviews for product route and service.
