# build/swagger.json
@@ -90,7 +90,108 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"QueryParams": {
+			"ProductQueryParams": {
+				"properties": {
+					"page": {
+						"type": "string"
+					},
+					"limit": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"page",
+					"limit"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ProductCreationParams": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"category": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"category",
+					"price",
+					"image"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewDto": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"text": {
+						"type": "string"
+					},
+					"rating": {
+						"type": "number",
+						"format": "double"
+					},
+					"productId": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"_id",
+					"text",
+					"rating",
+					"productId",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewListResponse": {
+				"properties": {
+					"reviews": {
+						"items": {
+							"$ref": "#/components/schemas/ReviewDto"
+						},
+						"type": "array"
+					},
+					"totalPages": {
+						"type": "number",
+						"format": "double"
+					},
+					"currentPage": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"reviews",
+					"totalPages",
+					"currentPage"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewQueryParams": {
 				"properties": {
 					"page": {
 						"type": "string"
@@ -141,6 +242,7 @@
 						}
 					}
 				},
+				"description": "Retrieves a an array of products. Requires URL query params page and limit.\nOptional URL query params page and limit.\nIf no page or limit given, only first 10 results returned.",
 				"security": [],
 				"parameters": [
 					{
@@ -160,11 +262,32 @@
 						}
 					}
 				]
+			},
+			"post": {
+				"operationId": "PostProduct",
+				"responses": {
+					"201": {
+						"description": "Created"
+					}
+				},
+				"description": "Creates a product. Pass product information using request body.",
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ProductCreationParams"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/products/{productId}": {
 			"get": {
-				"operationId": "GetByProductId",
+				"operationId": "GetProductById",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -178,12 +301,72 @@
 										{
 											"$ref": "#/components/schemas/Error"
 										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a single product using product Id in URL path.",
+				"security": [],
+				"parameters": [
+					{
+						"description": "The unique product id.",
+						"in": "path",
+						"name": "productId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteProduct",
+				"responses": {
+					"204": {
+						"description": "No Content"
+					}
+				},
+				"description": "Deletes a single product using product Id in URL path.",
+				"security": [],
+				"parameters": [
+					{
+						"description": "The unique product id.",
+						"in": "path",
+						"name": "productId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/products/{productId}/reviews": {
+			"get": {
+				"operationId": "GetProductReviews",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ReviewListResponse"
+										},
+										{
+											"$ref": "#/components/schemas/Error"
+										}
 									]
 								}
 							}
 						}
 					}
 				},
+				"description": "Retrieves a an array of reviews for a specific product Id.\nOptional URL query params page and limit.\nIf no page or limit given, only first 10 results returned.",
 				"security": [],
 				"parameters": [
 					{
@@ -193,8 +376,36 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
+			}
+		},
+		"/generate": {
+			"get": {
+				"operationId": "GenerateData",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
