# src/products/productModel.ts
@@ -4,8 +4,8 @@ const { Schema, model } = mongoose;
 //This is the Product Schema
 const ProductSchema = new Schema(
   {
-    category: { type: String, required: true },
     name: { type: String, required: true },
+    category: { type: String, required: true },
     price: { type: Number, required: true },
     image: { type: String, required: true },
   },
